--- a/public/styles/utils.css
+++ b/public/styles/utils.css
@@ -65,7 +65,7 @@
 .wrapper {
   width: var(--wrapper-width-s);
   margin: 0 auto;
-  height: 100%;
+  /* height: 100%; */
   padding: 0 var(--space-2xl);
   display: flex;
   justify-content: center;
